# hot-resize

./: Cargo.toml  README.md  hot-resize-module.nix  release.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  resize.rs
