[package]
name = "hot-resize"
version = "0.1.0"
edition = "2021"
description = "Safe disk resizing tool for NixOS"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = "0.27"
block-utils = "0.11"
which = "4.4"
