[package]
name = "hot-resize"
version = "0.1.3"
edition = "2024"
description = "Safe disk resizing tool for NixOS"
license = "GPL-3.0"
repository = "https://github.com/liberodark/hot-resize"
readme = "README.md"
keywords = ["resize", "disk", "nixos", "partition", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["block-utils-support"]
block-utils-support = ["block-utils"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = "0.30"
block-utils = { version = "0.11", optional = true }
which = "4.4"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
