[package]
name = "hot-resize"
version = "0.1.6"
edition = "2024"
description = "Safe disk resizing tool"
license = "GPL-3.0"
repository = "https://github.com/liberodark/hot-resize"
readme = "README.md"
keywords = ["resize", "disk", "partition", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.31", features = ["user", "fs"] }
ctrlc = "3.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
